---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: ????
  Major Features:
    - Now has a UI to display the tiers!
  Changes:
    - Refactored the monolithic data-final-fixes.lua into multiple files
    - Changed from a startup script to runtime
    - Add MIT License I forgor to
  Bugfixes:
    - Fixed a handful of bugs that I spotted while refactoring to runtime. Theoretically added just as many bugs though.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2024-05-18
  Features:
    - Burnable fuels now kind of work. Not all machines that can burn are currently being grabbed. To be refined
    - Rocket launch products now work. This means you can calculate space-science-pack instead of cobbling together its ingredients
  Bugfixes:
    - Now will no longer crash on recipes with no results
    - A category with no machines is now handled properly instead of relying on the safety net of pcall
    - A category with no valid machines now signals as invalid instead of leaking an infinity
  Changes:
    - Will only log when given an invalid type in startup settings, rather than halting it with an error
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2024-05-18
  Bugfixes:
    - Now has a pcall so it should just log an error instead of halting startup
    - Should now gracefully handle recipes that can't be unlocked (at least via research)
    - Added MoreSciencePacks-for1_1 as a hidden dependency so it properly considers the added science
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2024-05-17
  Features:
    - Add setting to define what items gets their tiers calculated
    - Add setting to directly set values as base items
    - Add setting to ignore problematic recipes
  Bugfixes: