@@ -1,11 +1,13 @@
 [mod-setting-name]
 tiergen-reduce-category=Decrement category tier's
+tiergen-reduce-technology=Decrement technology tier's
 tiergen-item-calculation=Items to calculate
 tiergen-base-items=Base item overrides
 tiergen-ignored-recipes=Ignored recipes
 tiergen-debug-log=Print startup debug
 
 [mod-setting-description]
+tiergen-reduce-category=Reduce the tier a recipe category is considered so the items can share a tier with the machine. Eg: iron plate and stone furnace
 tiergen-item-calculation=A comma separated list of item id's that'll be calculated for the tiers. Will recursively calculate the tier of resources used to create that item. If there is no recipe to make the item, it's considered t0 or a Base Item.
 tiergen-base-items=A comma separated list of item id's that'll have their tiers set to 0. Default is raw-fish as you can obtain it from launching space-science into space.
 tiergen-ignored-recipes=A comma separated list of recipe id's that'll be ignored when calculating item tiers. Meant to prevent early or cheap recipes from lowering an item's tier.
