@@ -3,12 +3,15 @@ Version: 0.2.0
 Date: ????
   Major Features:
     - Now has a UI to display the tiers!
+  Features:
+    - Add setting to decrement a technology tier. Meaning green science items can share a row with green science
   Changes:
     - Refactored the monolithic data-final-fixes.lua into multiple files
     - Changed from a startup script to runtime
     - Add MIT License I forgor to
   Bugfixes:
     - Fixed a handful of bugs that I spotted while refactoring to runtime. Theoretically added just as many bugs though.
+    - Caught a possible invalid science pack not resulting in an invalid technology
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.3
 Date: 2024-05-18
